# reconvene

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
docs/superpowers/plans/: 2026-07-12-e2e-playwright-implementation.md  2026-07-12-reconvene-implementation.md  2026-07-13-ui-polish-implementation.md  2026-07-15-chrome-pass-implementation.md  2026-07-16-localhost-request-hardening-implementation.md  2026-07-16-tui-frontend-implementation.md  2026-07-16-tui-lazy-previews-implementation.md  2026-07-19-search-sessions-topics-implementation.md
docs/superpowers/specs/: 2026-07-12-e2e-playwright-design.md  2026-07-12-reconvene-design.md  2026-07-13-ui-polish-design.md  2026-07-15-chrome-pass-design.md  2026-07-16-localhost-request-hardening-design.md  2026-07-16-tui-frontend-design.md  2026-07-16-tui-lazy-previews-design.md  2026-07-19-search-sessions-topics-design.md  2026-07-20-penguinboi-brand-polish-design.md  2026-07-20-theme-toggle-design.md
reconvene/: _preview.py  _search.py  classify.py  cli.py  cluster.py  config.py  constants.py  db.py  journal.py  recap.py  resume.py  search.py  tui.py
reconvene/web/: server.py
reconvene/web/static/: app.js  index.html  settings.html  settings.js  style.css  theme.js
tests/: conftest.py  test_classify.py  test_cli.py  test_cluster.py  test_config.py  test_constants.py  test_db.py  test_e2e.py  test_journal.py  test_preview.py  test_recap.py  test_resume.py  test_search.py  test_tui.py  test_web_server.py
tests/e2e/: conftest.py  test_journal_page.py  test_search_page.py  test_settings_page.py  test_smoke.py  test_theme_toggle.py
