[project]
name = "reconvene"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
reconvene = "reconvene.cli:main"

[project.optional-dependencies]
test = ["playwright", "pytest-playwright"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reconvene", "reconvene.web"]

[tool.setuptools.package-data]
# Ship the web UI assets; without this the installed server serves the API but 404s the pages.
"reconvene.web" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
