[project]
name = "reconvene"
version = "0.2.0"
description = "Resume Claude Code sessions from a browser tab — a ranked per-project journal over ccrider's session history."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Skyler Lister Aley", email = "penguinboisoftware@gmail.com" }]
keywords = ["claude-code", "ccrider", "sessions", "resume", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/penguinboi/reconvene"
Repository = "https://github.com/penguinboi/reconvene"
"Penguinboi Software" = "https://penguinboisoftware.com"

[project.scripts]
reconvene = "reconvene.cli:main"

[project.optional-dependencies]
test = ["playwright", "pytest-playwright"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["reconvene", "reconvene.web"]

[tool.setuptools.package-data]
# Ship the web UI assets; without this the installed server serves the API but 404s the pages.
"reconvene.web" = ["static/*.html", "static/*.css", "static/*.js", "static/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
